src/objects/ja__mdt/ja__mdt.object-meta.xml
<CustomObject>
    <label>Translations</label>
    <pluralLabel>Translations</pluralLabel>
</CustomObject>