src/objects/ja__mdt/fields/button1__c.field-meta.xml
<CustomField>
    <fullName>button1__c</fullName>
    <label>button1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>