src/objects/ja__mdt/fields/button2__c.field-meta.xml
<CustomField>
    <fullName>button2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>button2</label>
    <type>Checkbox</type>
</CustomField>