src/objects/ja__mdt/fields/button__c.field-meta.xml
<CustomField>
    <fullName>button__c</fullName>
    <defaultValue>false</defaultValue>
    <label>button</label>
    <type>Checkbox</type>
</CustomField>